--- a/fiftyone.yml
+++ b/fiftyone.yml
@@ -1,6 +1,6 @@
 name: "@harpreetsahota/wandb"
 description: Track model training experiments with Weights & Biases!
-version: 0.1.0
+version: 0.2.0
 fiftyone:
   version: ">=0.23.0"
 license: Apache 2.0
@@ -13,6 +13,7 @@ operators:
   - show_wandb_run
   - show_wandb_report
   - embed_report
+  - log_fiftyone_view_to_wandb
 secrets:
   - FIFTYONE_WANDB_API_KEY
   - FIFTYONE_WANDB_ENTITY
