--- a/fiftyone.yml
+++ b/fiftyone.yml
@@ -16,6 +16,7 @@ operators:
   - show_wandb_report
   - log_fiftyone_view_to_wandb
   - log_model_predictions
+  - load_view_from_wandb
 
 # TypeScript/React panels
 panels:
